syntax = "proto3";

// 加快解析
option optimize_for = SPEED;
option java_package = "cn.lollipop.common.bean.msg";
option java_outer_classname = "ProtoMsg";

enum HeadType {
  // 登录请求
  LOGIN_REQUEST = 0;
  // 登录响应
  LOGIN_RESPONSE = 1;
  // 登出请求
  LOGOUT_REQUEST = 2;
  // 登出响应
  LOGOUT_RESPONSE = 3;
  // 心跳请求
  KEEPALIVE_REQUEST = 4;
  // 心跳响应
  KEEPALIVE_RESPONSE = 5;
  // 聊天消息请求
  MESSAGE_REQUEST = 6;
  // 聊天消息响应
  MESSAGE_RESPONSE = 7;
  // 服务器推送
  MESSAGE_NOTIFICATION = 8;
}

// 登录请求信息
message LoginRequest {
  // 用户唯一Id
  string uid = 1;
  // 设备Id
  string deviceId = 2;
  // 用户token
  string token = 3;
  // client_id
  uint32 platform = 4;
  // app版本号
  string appVersion = 5;
}

// 登录响应
message LoginResponse {
  // 发送成功或失败
  bool result = 1;
  // 错误码
  uint32 code = 2;
  // 错误描述
  string info = 3;
  // 错误描述是否提示给用户
  uint32 expose = 4;
}


// 聊天消息请求
message MessageRequest {
  uint64 msgId = 1;
  string from = 2;
  string to = 3;
  uint64 time = 4;
  uint32 msgType = 5;
  string content = 6;
  string url = 8;
  string property = 9;
  string fromNick = 10;
  string json = 11;
}

// 聊天消息响应
message MessageResponse {
  // 发送成功或失败
  bool result = 1;
  // 错误码
  uint32 code = 2;
  // 错误描述
  string info = 3;
  // 错误描述是否提示给用户
  uint32 expose = 4;
  // 是否为最后的应答
  bool lastBlock = 5;
  // 应答的序号
  fixed32 blockIndex = 6;
}

// 服务端推送
message MessageNotification {
  uint32 msgType = 1;
  bytes sender = 2;
  string json = 3;
  string timestamp = 4;
}

// 心跳请求
message HeartBeatRequest {
  uint32   seq = 1;
  string   uid = 2;
  string   json = 3;
}

// 外层消息
message Message {
  // 消息类型
  HeadType type = 1;
  // 序列号
  uint64 sequence = 2;
  // 回话Id
  string sessionId = 3;
  // 登录请求
  LoginRequest loginRequest = 4;
  // 登录响应
  LoginResponse loginResponse = 5;
  // 聊天请求
  MessageRequest messageRequest = 6;
  // 聊天响应
  MessageResponse messageResponse = 7;
  // 服务端推送
  MessageNotification notification = 8;
  // 心跳请求
  HeartBeatRequest heartBeatRequest = 9;
}
